# Damien-Email-Wrestler

./: .env.example  .env.old  .gitignore  AI_INTELLIGENCE_LAYER_IMPLEMENTATION_GUIDE.md  AI_INTELLIGENCE_TEST_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTINUATION_PROMPT.md  DOCUMENTATION_INVENTORY.md  DRAFT_MANAGEMENT_IMPLEMENTATION_COMPLETE.md  Damien Platform_Cleanup_and_Organization_Plan.md  Damien_Enhancement_Checklist.md  Damien_Optimization_and_Enhancement_Plan.md  E2E_TESTING_GUIDE.md  ENVIRONMENT_SETUP.md  GIT_COMMIT_SUMMARY.md  ISSUE_REPORT_EmailProcessingWorkflow.md  NEXT_CHAT_STATUS.md  NEXT_STEPS_QUICK_REFERENCE.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPUS-Comprehensive-Analysis.md  PHASE_3_CONTINUATION_PROMPT.md  PHASE_3_TECHNICAL_IMPLEMENTATION.md  PHASE_4_AI_INTELLIGENCE_SUCCESS.md  PHASE_4_CRITICAL_HANDLER_FIX.md  PHASE_4_SUCCESS_REPORT.md  PLATFORM_STATUS_COMPLETE.md  PRODUCTION_READINESS_PLAN.md  RAGENGINE_COMPLETION_SUMMARY.md  README.md  RULE_CREATION_FIX_REPORT.md  RULE_FIX_SUMMARY.md  SECURITY_CHECKLIST.md  THREAD_OPERATIONS_COMPLETE.md  TONIGHT_COMMIT_SUMMARY.md  analyze_token_usage.py  claude-tool-config.json  consolidate_docs.sh  damien-tool-usage-policy.md  damien_architecture_v4.md  (+18 more)
damien-cli/: CHANGELOG.md  INTELLIGENCE_ROUTER_COMPLETE.md  README.md  analysis_results.json  batch_processor_completion_summary.py  cli_entry.py  generate_integration_report.py  minimal_import_test.py  minimal_test.py  phase_2_integration_report.json  pyproject.toml  pytest.ini  ragengine_readiness_check.py  super_minimal_test.py  test_batch_processor_integration.py  test_component_imports.py  test_embeddings.py  test_embeddings_integration.py  test_end_to_end_pipeline.py  test_env.py  test_error_handling.py  test_fixes.py  test_gmail_integration.py  test_imports.py  test_model_validation.py  test_pattern_creation.py  test_pattern_detection.py  test_phase3_complete_integration.py  test_phase3_validation.py  test_rag_engine_integration.py  test_router_integration.py  test_sentence_transformers.py  validate_environment.py  validate_fixes.py
damien-cli/core/: __init__.py  app_logging.py  config.py
damien-cli/damien_cli/: cli_entry.py  embeddings.py
damien-cli/damien_cli/core/: app_logging.py  cli_utils.py  config.py  logging_setup.py
damien-cli/damien_cli/core_api/: exceptions.py  gmail_api_service.py  rate_limiter.py  rules_api_service.py
damien-cli/damien_cli/features/: __init__.py
damien-cli/damien_cli/features/ai_intelligence/: __init__.py  commands.py  models.py
damien-cli/damien_cli/features/ai_intelligence/categorization/: categorizer.py  embeddings.py  (+2 more)
damien-cli/damien_cli/features/email_management/: commands.py
damien-cli/damien_cli/features/rule_management/: commands.py  models.py
damien-cli/damien_cli/integrations/: gmail_integration.py
damien-cli/damien_cli/utilities/: __init__.py  progressive_processor.py  query_optimizer.py
damien-cli/docs/: ARCHITECTURE.md  CLAUDE_INTEGRATION_CHECKLIST.md  CLAUDE_INTEGRATION_GUIDE.md  DEVELOPER_GUIDE.md  MCP_SERVER_ARCHITECTURE.md  PHASE_3_STATUS.md  ROADMAP.md  USER_GUIDE.md
damien-cli/features/: __init__.py
damien-cli/features/ai_intelligence/: __init__.py
damien-cli/features/ai_intelligence/llm_integration/: __init__.py  base.py  privacy.py  prompts.py  router.py
damien-cli/features/email_management/: commands.py
damien-cli/test/: archived_test_email_management_commands.py  test_gmail_api_service_settings.py
damien-cli/tests/: test_base_structs.py  test_connectivity.py  test_context_optimizer.py  test_llm_orchestrator.py  test_pii_detection.py  test_pii_detection_enhanced.py  test_privacy_performance.py  test_token_counter.py  test_tokenization.py
damien-cli/tests/core_api/: test_gmail_api_service.py  test_rules_api_service.py
damien-cli/tests/features/email_management/: test_commands.py
damien-cli/tests/features/rule_management/: test_rules_apply_command.py
damien-cli/tests/utilities/: test_progressive_processor.py  test_query_optimizer.py
damien-mcp-server/: CHANGELOG.md  DRAFT_TOOL_FIX_STATUS.md  FIXES_SUMMARY.md  PHASE1_JOB_MANAGEMENT_VALIDATION.md  README.md  THREAD_OPERATIONS_GUIDE.md  pyproject.toml  test_fetch_emails_implementation.py  test_large_scale_analysis.py  test_thread_direct.py  validate_job_management.py
damien-mcp-server/app/: main.py
damien-mcp-server/app/core/: config.py  logging_setup.py  progress_tracker.py  security.py  tool_usage_config.py
damien-mcp-server/app/dependencies/: dependencies_service.py
damien-mcp-server/app/middleware/: mcp_prioritization.py  tool_usage_enforcement.py
damien-mcp-server/app/models/: tools.py
damien-mcp-server/app/routers/: tools.py
damien-mcp-server/app/services/: async_processor.py  cli_bridge.py  damien_adapter.py  tool_registry.py
damien-mcp-server/app/tools/: ai_intelligence.py  async_tools.py  draft_tools.py  register_ai_intelligence.py  settings_tools.py  thread_tools.py
damien-mcp-server/damien_smithery_adapter/: package.json  tsconfig.json
damien-mcp-server/damien_smithery_adapter/src/: config.ts
damien-mcp-server/test/: test_draft_tools.py  test_settings_tools.py  test_thread_tools.py
damien-mcp-server/tests/: test_async_job_management.py
damien-mcp-server/tests/core/: test_config.py
damien-mcp-server/tests/models/: test_tools.py  test_tools_validation.py
damien-mcp-server/tests/services/: test_damien_adapter.py  test_optimized_operations.py
damien-mcp-server/tools/: fetch_recent_unread_from_addresses.py  generate_schemas.py  test_mcp.py  test_smithery_compatibility.sh
damien-mcp-server/tools/schemas/: damien_list_emails.json
(+216 files in other folders)
