[tool.poetry]
name = "damienmcp-server"
version = "0.1.0"
description = "MCP Server for Damien-CLI functionalities"
authors = ["Ivan Rivera <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}] # Changed from damien_mcp_server

[tool.poetry.dependencies]
python = ">=3.11,<3.13" # Aligned with damien-cli compatibility
fastapi = "0.115.9"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
boto3 = "^1.28.64"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.9.1"
damien-cli-project = {path = "../damien-cli", develop = true}
aioboto3 = "^12.3.0" # Added aioboto3
python-json-logger = "^2.0.7" # Added for structured logging
numpy = "^1.24.0,<2.0.0"  # Aligned with damien-cli compatibility
scikit-learn = "^1.6.1"
tiktoken = "^0.7.0"  # Aligned with damien-cli compatibility
sentence-transformers = "2.6.0"  # Aligned with damien-cli compatibility

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.0" # Or a more recent compatible version
httpx = "^0.27.0"
black = "^23.10.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
